2025-12-18T12:21:49Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20336779629 # 1373
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-18
* notice: last 14d: unq all: 51 88
* notice: prev accum: outdated-unq outdated-all / unq all: 3044 5448 / 3103 5534
* notice: next accum: outdated-unq outdated-all / unq all: 3044 5448 / 3104 5536
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2025-12-18]

2025-12-17T12:22:22Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20302650157 # 1371
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-17
* notice: last 14d: unq all: 51 86
* notice: prev accum: outdated-unq outdated-all / unq all: 3043 5444 / 3102 5532
* notice: next accum: outdated-unq outdated-all / unq all: 3044 5448 / 3103 5534
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2025-12-03] / [2025-12-17]

2025-12-16T12:22:47Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20267764612 # 1369
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-16
* notice: last 14d: unq all: 51 88
* notice: prev accum: outdated-unq outdated-all / unq all: 3041 5442 / 3095 5523
* notice: next accum: outdated-unq outdated-all / unq all: 3043 5444 / 3102 5532
* notice: prev exec diff / last date diff / accum: unq all: +7 +9 -0 -0 / +7 +9 -0 -0 / 7 9
* notice: removed / changed dates: [2025-12-02] / [2025-12-16]

2025-12-16T00:54:37Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20252712761 # 1368