@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-12-18T12:21:49Z",
-  "count_outdated" : 5448,
-  "uniques_outdated" : 3044,
-  "count" : 5536,
-  "uniques" : 3104,
+  "timestamp" : "2025-12-19T12:20:59Z",
+  "count_outdated" : 5456,
+  "uniques_outdated" : 3050,
+  "count" : 5537,
+  "uniques" : 3105,
   "clones" : [
-    {
-      "timestamp": "2025-12-05T00:00:00Z",
-      "count": 8,
-      "count_minmax": [ 7, 8 ],
-      "count_decinc": [ 0, 8 ],
-      "uniques": 6,
-      "uniques_minmax": [ 5, 6 ],
-      "uniques_decinc": [ 0, 6 ]
-    },
     {
       "timestamp": "2025-12-06T00:00:00Z",
       "count": 1,
@@ -109,6 +100,15 @@
       "count": 2,
       "count_minmax": [ 2, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-12-19T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
