@@ -1,3 +1,12 @@
+2025-12-19T12:20:59Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20369855034 # 1375
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-19
+* notice: last 14d: unq all: 48 81
+* notice: prev accum: outdated-unq outdated-all / unq all: 3044 5448 / 3104 5536
+* notice: next accum: outdated-unq outdated-all / unq all: 3050 5456 / 3105 5537
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2025-12-05] / [2025-12-19]
+
 2025-12-18T12:21:49Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20336779629 # 1373
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-18
